# kernelcuterl

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  COMPILATION_TIMING_REPORT.md  INTEGRATION_COMPLETE_REPORT.md  KERNELBENCH_FORMAT_STATUS_AND_CHECKS.md  PIPELINE_INTERFACE.md  README.md  SGLANG_INTEGRATION_ASSESSMENT.md  pyproject.toml  reeval_v9_think_only_correctness_multigpu.py  reeval_v9_with_correctness.py  reeval_v9_with_correctness_multigpu.py  requirements.txt  test_correctness.py  tmp_eval_probe.py  tmp_eval_probe_compile.py
dataset_shards/: README.md  canonical_all_plus_xpuoj_ast_near_dedup_exact_no_kernelbench_similar.jsonl.sha256
dataset_shards/release_20260412/: README.md  canonical_20260412_decontam.parts.sha256  canonical_20260412_decontam.tar.zst.sha256  final_dataset_report_zh.md  manifest.txt
dataset_shards/release_20260414/: README.md  canonical_20260414_decontam_queryfull.parts.sha256  canonical_20260414_decontam_queryfull.tar.zst.sha256  canonical_20260414_decontam_queryfull_en_v2.parts.sha256  canonical_20260414_decontam_queryfull_en_v2.tar.zst.sha256  eval_contamination_ir_embedding_report.json  final_dataset_report_zh.md  manifest.txt  query_english_clean_report_20260415.json  (+2 more)
difficulty_labels_submission_20260422/: PER_TASK_MULTI_METRIC_DIFFICULTY_REPORT.md  README.md  build_multi_metric_difficulty.py  per_task_multi_metric_difficulty_summary.json
kernelrl/: __init__.py  version.py
rollout/: monitor.sh  monitor_pipeline_v2.sh  reextract_kernels.py  single_turn_rollout.py
scripts/: eval_pipeline_demo.py
tests/: __init__.py
(+42 files in other folders)
